--- a/polybar.config
+++ b/polybar.config
@@ -73,14 +73,11 @@ tail = true
 
 [settings]
 screenchange-reload = true
-throttle-output = 5
-throttle-output-for = 10
-compositing-background = source
-compositing-foreground = over
-compositing-overline = over
-compositing-underline = over
-compositing-border = over
-pseudo-transparency = true
+;compositing-background = xor
+;compositing-background = screen
+;compositing-foreground = source
+;compositing-border = over
+;pseudo-transparency = false
 
 [global/wm]
 margin-top = 0
