--- a/polybar.config
+++ b/polybar.config
@@ -16,7 +16,7 @@
 ;
 ;==========================================================
 
-;include-file = $HOME/.config/leftwm/themes/current/polybar.modules
+include-file = $HOME/.config/leftwm/themes/current/polybar.modules
 
 [colors]
 foreground = #FFFFFF
@@ -42,8 +42,8 @@ offset-y = 18
 height = 26
 fixed-center = true
 bottom = false
-background = ${color.background}
-foreground = ${color.foreground}
+background = ${colors.background}
+foreground = ${colors.foreground}
 line-size = 2
 line-color = #f00
 border-size = 3
@@ -55,7 +55,7 @@ module-margin-right = 1
 font-0 = FiraCode Nerd Font Frozen:pixelsize=12;3
 font-1 = FiraCode Nerd Font Frozen:pixelsize=14;2 # For larger icons
 modules-center =
-modules-right = 
+modules-right = pacman-updates paru-updates pulseaudio brightnessctl battery date powermenu
 tray-position = right
 tray-padding = 1
 cursor-click = poin9D7153ter
