better font settings

--- a/polybar.config
+++ b/polybar.config
@@ -52,8 +52,9 @@ padding-left = 0
 padding-right = 1
 module-margin-left = 1
 module-margin-right = 1
-font-0 = FiraCode Nerd Font Frozen:pixelsize=12;3
-font-1 = FiraCode Nerd Font Frozen:pixelsize=14;2 # For larger icons
+font-0 = Fira Code Frozen:pixelsize=12;3 # does not have to be a nerd font
+font-1 = FiraCode Nerd Font:pixelsize=12;3 # icons
+font-2 = FiraCode Nerd Font:pixelsize=14;2 # larger icons
 modules-center =
 modules-right = pacman-updates paru-updates pulseaudio brightnessctl battery date powermenu
 tray-position = right
