--- a/polybar.config
+++ b/polybar.config
@@ -49,11 +49,11 @@ line-color = #f00
 border-size = 3
 border-color = ${colors.background-lighter}
 padding-left = 0
-padding-right = 1
-module-margin-left = 1
-module-margin-right = 1
-font-0 = Fira Code Frozen:pixelsize=12;3 # does not have to be a nerd font
-font-1 = FiraCode Nerd Font:pixelsize=12;3 # icons
+padding-right = 3
+module-margin-left = 3
+module-margin-right = 3
+font-0 = Lato:pixelsize=11;2 # text and numbers
+font-1 = FiraCode Nerd Font:pixelsize=11;2 # icons
 font-2 = FiraCode Nerd Font:pixelsize=14;2 # larger icons
 modules-center =
 modules-right = pacman-updates paru-updates pulseaudio brightnessctl battery date powermenu
