--- a/polybar.config
+++ b/polybar.config
@@ -35,10 +35,10 @@ inherit = bar/barbase
 modules-left = workspace1
 
 [bar/barbase]
-width = 100%:-36
+width = 100%:-48
 monitor = ${env:monitor}
-offset-x = 18
-offset-y = 18
+offset-x = 24
+offset-y = 24
 height = 26
 fixed-center = true
 bottom = false
@@ -49,16 +49,16 @@ line-color = #f00
 border-size = 3
 border-color = ${colors.background-lighter}
 padding-left = 0
-padding-right = 3
-module-margin-left = 3
-module-margin-right = 3
-font-0 = Lato:pixelsize=11;2 # text and numbers
+padding-right = 2
+module-margin-left = 1
+module-margin-right = 1
+font-0 = Fira Code Frozen:pixelsize=11;2 # text and numbers
 font-1 = FiraCode Nerd Font:pixelsize=11;2 # icons
 font-2 = FiraCode Nerd Font:pixelsize=14;2 # larger icons
 modules-center =
 modules-right = pacman-updates paru-updates pulseaudio brightnessctl battery date powermenu
 tray-position = right
-tray-padding = 1
+tray-padding = 0
 cursor-click = poin9D7153ter
 cursor-scroll = ns-resize
 
