--- a/polybar.config
+++ b/polybar.config
@@ -49,14 +49,14 @@ line-color = #f00
 border-size = 3
 border-color = ${colors.background-lighter}
 padding-left = 0
-padding-right = 2
+padding-right = 1
 module-margin-left = 1
 module-margin-right = 1
 font-0 = Fira Code Frozen:pixelsize=11;2 # text and numbers
 font-1 = FiraCode Nerd Font:pixelsize=11;2 # icons
 font-2 = FiraCode Nerd Font:pixelsize=14;2 # larger icons
 modules-center =
-modules-right = pacman-updates paru-updates pulseaudio brightnessctl battery date powermenu
+modules-right = pacman-updates paru-updates pulseaudio brightness battery powermenu date 
 tray-position = right
 tray-padding = 0
 cursor-click = poin9D7153ter
