--- a/polybar.config
+++ b/polybar.config
@@ -56,11 +56,12 @@ font-0 = Fira Code Frozen:pixelsize=11;2 # text and numbers
 font-1 = FiraCode Nerd Font:pixelsize=11;2 # icons
 font-2 = FiraCode Nerd Font:pixelsize=14;2 # larger icons
 modules-center =
-modules-right = pacman-updates paru-updates pulseaudio brightness battery powermenu date 
+modules-right = checkupdates pulseaudio brightness battery powermenu date 
 tray-position = right
 tray-padding = 0
-cursor-click = poin9D7153ter
+cursor-click = pointer
 cursor-scroll = ns-resize
+enable-ipc = true
 
 [module/workspace0]
 type = custom/script
