--- a/polybar.config
+++ b/polybar.config
@@ -44,8 +44,6 @@ fixed-center = true
 bottom = false
 background = ${colors.background}
 foreground = ${colors.foreground}
-line-size = 2
-line-color = #f00
 border-size = 3
 border-color = ${colors.background-lighter}
 padding-left = 0
@@ -56,7 +54,7 @@ font-0 = Fira Code Frozen:pixelsize=11;2 # text and numbers
 font-1 = FiraCode Nerd Font:pixelsize=11;2 # icons
 font-2 = FiraCode Nerd Font:pixelsize=13;2 # larger icons
 modules-center =
-modules-right = checkupdates pulseaudio brightness battery powermenu date 
+modules-right = pulseaudio brightness battery powermenu date 
 tray-position = right
 tray-padding = 0
 cursor-click = pointer
