--- a/polybar.config
+++ b/polybar.config
@@ -50,7 +50,7 @@ padding-left = 0
 padding-right = 2
 module-margin-left = 2
 module-margin-right = 2
-font-0 = Fira Code Frozen:pixelsize=11;2 # text and numbers
+font-0 = Lato:pixelsize=11;2 # text and numbers
 font-1 = FiraCode Nerd Font:pixelsize=11;2 # icons
 font-2 = FiraCode Nerd Font:pixelsize=13;2 # larger icons
 modules-center =
