--- a/polybar.config
+++ b/polybar.config
@@ -52,7 +52,7 @@ module-margin-left = 2
 module-margin-right = 2
 font-0 = Arimo Nerd Font:pixelsize=12;3 # text (any font you like)
 font-1 = Arimo Nerd Font:pixelsize=12;3 # icons (nerd font)
-font-2 = FiraCode Nerd Font:pixelsize=11;2 # tag font (monospace nerd font)
+font-2 = FiraCode Nerd Font:pixelsize=12;3 # tags (monospace nerd font)
 modules-center =
 modules-right = pulseaudio brightness battery powermenu date 
 tray-position = right
