--- a/polybar.config
+++ b/polybar.config
@@ -50,8 +50,8 @@ padding-left = 0
 padding-right = 2
 module-margin-left = 2
 module-margin-right = 2
-font-0 = Arimo Nerd Font:pixelsize=12;3 # text (any font you like)
-font-1 = Arimo Nerd Font:pixelsize=12;3 # icons (nerd font)
+font-0 = Roboto:pixelsize=12;3 # text (any font you like)
+font-1 = FiraCode Nerd Font:pixelsize=12;3 # icons (nerd font)
 font-2 = FiraCode Nerd Font:pixelsize=12;3 # tags (monospace nerd font)
 modules-center =
 modules-right = pulseaudio brightness battery powermenu date 
