--- a/polybar.config
+++ b/polybar.config
@@ -60,6 +60,7 @@ tray-padding = 0
 cursor-click = pointer
 cursor-scroll = ns-resize
 enable-ipc = true
+locale = cs_CZ.utf8
 
 [module/workspace0]
 type = custom/script
