--- a/polybar.config
+++ b/polybar.config
@@ -54,7 +54,7 @@ font-0 = Roboto:pixelsize=12;3 # text (any font you like)
 font-1 = FiraCode Nerd Font:pixelsize=12;3 # icons (nerd font)
 font-2 = FiraCode Nerd Font:pixelsize=12;3 # tags (monospace nerd font)
 modules-center =
-modules-right = pulseaudio brightness battery powermenu date 
+modules-right = checkupdates pulseaudio brightness battery powermenu date 
 tray-position = right
 tray-padding = 0
 cursor-click = pointer
