do not reload on screenchange

--- a/polybar.config
+++ b/polybar.config
@@ -73,7 +73,7 @@ exec = leftwm-state -w 1 -t "$SCRIPTPATH/polybar.liquid"
 tail = true
 
 [settings]
-screenchange-reload = true
+;screenchange-reload = true
 ;compositing-background = xor
 ;compositing-background = screen
 ;compositing-foreground = source
