--- a/polybar.config
+++ b/polybar.config
@@ -22,8 +22,7 @@ include-file = $HOME/.config/leftwm/themes/current/polybar.modules
 foreground = #FFFFFF
 foreground-alt = #75715e
 background = #272822
-background-lighter = #4A433D
-background-darker = #181915
+background-alt = #4A433D
 alert = #f9246f
 
 [bar/mainbar0]
@@ -45,7 +44,7 @@ bottom = false
 background = ${colors.background}
 foreground = ${colors.foreground}
 border-size = 3
-border-color = ${colors.background-lighter}
+border-color = ${colors.background-alt}
 padding-left = 0
 padding-right = 2
 module-margin-left = 2
