--- a/polybar.config
+++ b/polybar.config
@@ -37,7 +37,7 @@ modules-left = workspace1
 width = 100%:-32
 monitor = ${env:monitor}
 offset-x = 16
-offset-y = 17
+offset-y = 13
 height = 26
 fixed-center = true
 bottom = false
@@ -58,7 +58,7 @@ tray-position = right
 tray-padding = 0
 cursor-click = pointer
 cursor-scroll = ns-resize
-enable-ipc = true
+# enable-ipc = true
 locale = cs_CZ.utf8
 
 [module/workspace0]
