--- a/theme.toml
+++ b/theme.toml
@@ -1,6 +1,6 @@
 border_width = 3
 margin = 10
-workspace_margin = 6
+workspace_margin = [2,6,4,6]
 default_border_color = "#4A433D"
 floating_border_color = "#E6E5E5"
 focused_border_color = "#E7BE63"
