moved polybar and rofi files to separate folders

--- a/polybar/polybar.config
+++ b/polybar/polybar.config
@@ -16,7 +16,7 @@
 ;
 ;==========================================================
 
-include-file = $HOME/.config/leftwm/themes/current/polybar.modules
+include-file = $HOME/.config/leftwm/themes/current/polybar/polybar.modules
 
 [colors]
 foreground = #FFFFFF
@@ -53,7 +53,7 @@ font-0 = Roboto:pixelsize=12;3 # text (any font you like)
 font-1 = FiraCode Nerd Font:pixelsize=12;3 # icons (nerd font)
 font-2 = FiraCode Nerd Font:pixelsize=12;3 # tags (monospace nerd font)
 modules-center =
-modules-right = pulseaudio battery powermenu date 
+modules-right = brightness battery powermenu date 
 tray-position = right
 tray-padding = 0
 cursor-click = pointer
@@ -63,12 +63,12 @@ locale = cs_CZ.utf8
 
 [module/workspace0]
 type = custom/script
-exec = leftwm-state -w 0 -t "$SCRIPTPATH/polybar.liquid"
+exec = leftwm-state -w 0 -t "$SCRIPTPATH/polybar/polybar.liquid"
 tail = true
 
 [module/workspace1]
 type = custom/script
-exec = leftwm-state -w 1 -t "$SCRIPTPATH/polybar.liquid"
+exec = leftwm-state -w 1 -t "$SCRIPTPATH/polybar/polybar.liquid"
 tail = true
 
 [settings]
