--- a/polybar/polybar.config
+++ b/polybar/polybar.config
@@ -59,7 +59,7 @@ tray-padding = 0
 cursor-click = pointer
 cursor-scroll = ns-resize
 # enable-ipc = true
-locale = cs_CZ.utf8
+locale = en_GB.utf8
 
 [module/workspace0]
 type = custom/script
